# units

./: .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt
include/: units.hpp
include/units/: dimension.hpp  downcast.hpp  magnitude.hpp  meta.hpp  power.hpp  primes.hpp  quantity.hpp  type_name.hpp  unit.hpp
tests/: CMakeLists.txt  test_magnitude.cpp  test_prime.cpp  test_quantity.cpp  test_unit.cpp  unit_definition.h
